--- a/src/app/bs-nav-bar/bs-nav-bar.component.html
+++ b/src/app/bs-nav-bar/bs-nav-bar.component.html
@@ -9,14 +9,16 @@
       <li class="nav-item">
         <a class="nav-link" routerLink="/shopping-cart">Shoping Cart</a>
       </li>
-      
-      <li ngbDropdown class="nav-item dropdown ">
-        <a ngbDropdownToggle class="nav-link dropdown-toggle "  id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">User Name</a>
+      <li class="nav-item" *ngIf="!user">
+        <a class="nav-link" routerLink="/login">Login</a>
+      </li>
+      <li ngbDropdown class="nav-item dropdown " *ngIf="user">
+        <a ngbDropdownToggle class="nav-link dropdown-toggle "  id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">{{user}}</a>
         <div ngbDropdownMenu class="dropdown-menu  " aria-labelledby="dropdown01">
           <a  class="dropdown-item" routerLink="/my/orders">My Orders</a>
           <a  class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
           <a  class="dropdown-item" routerLink="/admin/products">Manage Products</a>
-          <a  class="dropdown-item" routerLink="">Logout</a>
+          <a  class="dropdown-item" routerLink="" (click)="logout()">Log out</a>
         </div>
       </li>
     </ul>
